fix?: trying to resolve contact display issue on iphone chrome

--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -112,4 +112,9 @@
         height: 60px;
         text-align: center;
     }
+    .card{
+        font-size: 10px;
+        padding-top: 2px;
+        padding-bottom: 2px;
+    }
 }
